--- a/extended-web-map.html
+++ b/extended-web-map.html
@@ -50,19 +50,19 @@
 	var waspIcon = new avengersIcon({iconUrl: 'assets/wasp.png'});
 	var wonderManIcon = new avengersIcon({iconUrl: 'assets/wonder-man.png'});
 
-    var marker = L.marker([40.72942, -73.99589], {icon: blackPantherIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([-4.477535, -67.840048], {icon: blackWidowIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([34.036095, -118.295045], {icon: captainAmericaIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([59.917401, 42.716690], {icon: captainMarvelIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([36.422271, 42.869956], {icon: falconIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([33.754466, 1.176802], {icon: hankPymIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([20.853644, -11.882391], {icon: hulkIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([62.683942, -45.510817], {icon: ironManIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([53.263445, 10.419206], {icon: lukeCageIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([50.136277, 36.815292], {icon: thorIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([59.565558, -122.469682], {icon: visionIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([66.051737, -87.503334], {icon: waspIcon}).addTo(map).bindPopup("Yo!");
-    var marker = L.marker([12.947953, 19.503910], {icon: wonderManIcon}).addTo(map).bindPopup("Yo!");
+    var marker = L.marker([40.72942, -73.99589], {icon: blackPantherIcon}).addTo(map).bindPopup("231 people");
+    var marker = L.marker([-4.477535, -67.840048], {icon: blackWidowIcon}).addTo(map).bindPopup("82 people");
+    var marker = L.marker([34.036095, -118.295045], {icon: captainAmericaIcon}).addTo(map).bindPopup("121 people");
+    var marker = L.marker([59.917401, 42.716690], {icon: captainMarvelIcon}).addTo(map).bindPopup("45 people");
+    var marker = L.marker([36.422271, 42.869956], {icon: falconIcon}).addTo(map).bindPopup("72 people");
+    var marker = L.marker([33.754466, 1.176802], {icon: hankPymIcon}).addTo(map).bindPopup("34 people");
+    var marker = L.marker([20.853644, -11.882391], {icon: hulkIcon}).addTo(map).bindPopup("51 people");
+    var marker = L.marker([62.683942, -45.510817], {icon: ironManIcon}).addTo(map).bindPopup("24 people");
+    var marker = L.marker([53.263445, 10.419206], {icon: lukeCageIcon}).addTo(map).bindPopup("142 people");
+    var marker = L.marker([50.136277, 36.815292], {icon: thorIcon}).addTo(map).bindPopup("98 people");
+    var marker = L.marker([59.565558, -122.469682], {icon: visionIcon}).addTo(map).bindPopup("102 people");
+    var marker = L.marker([66.051737, -87.503334], {icon: waspIcon}).addTo(map).bindPopup("20 people");
+    var marker = L.marker([12.947953, 19.503910], {icon: wonderManIcon}).addTo(map).bindPopup("69 people");
 
     </script>
 </body>
